--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AP'
 - !lcsh 'English wit and humor -- Periodicals'
+- GITenberg
 title: Punch, or the London Charivari, Vol. 158, 1920-06-30
 url: http://www.gutenberg.org/ebooks/16640
